FIXES: Dynamic height issue on mobile

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,7 +3,7 @@
 
 .layout {
     display: flex;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
     background-color: $bg-primary;
     color: $text-primary;
